ufw gallery mods

--- a/_posts/2021-03-08-gallery.md
+++ b/_posts/2021-03-08-gallery.md
@@ -3,7 +3,11 @@ layout: post
 title:  "Gallery"
 categories: coding
 ---
-
+<link rel="stylesheet" href="{{ site.baseurl }}/assets/css/lightbox.css">
 **Gallery**
 
 {% include image-gallery.html folder="/assets/images" %}
+ <script src="https://code.jquery.com/jquery-3.6.0.js" 
+integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" 
+crossorigin="anonymous"></script>
+  <script src="{{ site.baseurl }}/assets/js/lightbox.js"></script>
