--- a/_posts/2021-03-14-ufw-basic.md
+++ b/_posts/2021-03-14-ufw-basic.md
@@ -10,12 +10,11 @@ If your going to search for your UFW rules any worthwhile results will be buried
 
 ```
 $ sudo ufw status numbered
-$ sudo ufw allow from 1.2.3.4 to any port 22 proto tcp
+$ sudo ufw allow from 1.1.1.1 to any port 22 proto tcp
 $ sudo ufw insert 1 your_rule
 $ sudo ufw insert 1 deny from 1.1.1.1 to any
-$ sudo ufw allow from 192.168.0.4 to any port 22 proto tcp
 $ sudo ufw delete 1
-$ sudo ufw insert 1 allow from 96.19.4.81 to any port 10000 comment 'webmin'
+$ sudo ufw insert 1 allow from 1.1.1.1 to any port 10000 comment 'webmin'
 ```
 
 **Once a rule is matched** the others will not be evaluated. You must put the specific rules first.
@@ -31,9 +30,8 @@ Because of IP ranges with a slash / the usual / delimeter for SED is replaced wi
 	
 find and replace with grep and sed. The -l flag prints only the file name. 
 
-    grep -rl  '96.19.9.36' *  | xargs sed -i 's|96.19.9.36|96.19.4.81|g'
-	grep -rl  'require' *  | xargs sed -i 's|96.19.9.36|96.19.4.81|g'
-    grep -rl  '1.1.1.1' /path/to/files/*  | xargs sed -i 's|11.1.1.1/24|1.2.3.4|g'
+    grep -rl  '1.1.1.1' *  | xargs sed -i 's|1.1.1.1|1.2.3.4|g'
+    grep -rl  '1.1.1.1' /path/to/files/*  | xargs sed -i 's|1.1.1.1|1.2.3.4|g'
 	
 Check if it worked: 
 
