simple href changed to img for lightbox

--- a/_posts/2021-03-08-simple.md
+++ b/_posts/2021-03-08-simple.md
@@ -28,10 +28,7 @@ Worked and was easy to tweak and troubleshoot.
      
       name: {{ doggy.name }},
       breed: {{ doggy.breed }},
-      <a href="{{ doggy.imageurl }}">
-       {{ doggy.name }}
-      </a>
-     
+      <img src="{{ doggy.imageurl }} alt={{doggy.name}}">
 </li>
 {% endfor %}
 </ul>
