--- a/_posts/2021-03-08-simple.md
+++ b/_posts/2021-03-08-simple.md
@@ -28,7 +28,7 @@ Worked and was easy to tweak and troubleshoot.
      
       name: {{ doggy.name }},
       breed: {{ doggy.breed }},
-      <img src="{{ doggy.imageurl }} alt={{doggy.name}}">
+      <img src="{{ doggy.imageurl }}" alt="{{doggy.name}}">
 </li>
 {% endfor %}
 </ul>
